--- a/src/site/styles/custom-style.scss
+++ b/src/site/styles/custom-style.scss
@@ -1,13 +1,14 @@
 body {
-    /***
-      ADD YOUR CUSTOM STYLING HERE. (INSIDE THE body {...} section.)
-      IT WILL TAKE PRECEDENCE OVER THE STYLING IN THE STYLE.CSS FILE.
-   ***/
-    //  background-color: white;
-    //  .content {
-    //   font-size: 14px;
-    //  }
-    //  h1 {
-    //   color: black;
-    //  }
+.content {
+    max-width: 800px;
+    margin: auto;
+    font-size: 18px;
+    line-height: 1.5;
+    margin-top: 15px;
+    position: relative;
+
+    @media  (max-width: 800px) {
+            margin-top: 40px;
+            }
+        }
 }
