--- a/src/site/_includes/components/searchContainer.njk
+++ b/src/site/_includes/components/searchContainer.njk
@@ -1,20 +1,20 @@
 <div class="search-container" id="globalsearch" onclick="toggleSearch()">
     <div class="search-box">
-        <input type="search" id="term" placeholder="Start typing...">
+        <input type="search" id="term" placeholder="Začni psát...">
         <div id="search-results"></div>
         <footer class="search-box-footer">
             <div class="navigation-hint">
-                <span>Enter to select</span>
+                <span>Enter=Vyber</span>
             </div>
 
             <div class="navigation-hint align-icon">
                 <i  icon-name="arrow-up" aria-hidden="true"></i>
                 <i  icon-name="arrow-down" aria-hidden="true"></i>
-                <span>to navigate</span>
+                <span>pro navigaci</span>
             </div>
 
             <div class="navigation-hint">
-                <span>ESC to close</span>
+                <span>ESC=Zavřít</span>
             </div>
 
         </footer>
